--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but n.eko doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Streamable doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="neko"></div>
     <p>
